# aura

./: .gitignore  AGENT_GUIDE.md  CLAUDE.md  Cargo.toml  README.md  SELF-HEALING.md  SYNTAX.md  TESTING.md
docs/academic/: AURA-Technical-Report.md
docs/academico/: AURA-Reporte-Tecnico.md
examples/: .env  01_api_client.aura  02_crud_users.aura  03_data_analysis.aura  04_webhook_handler.aura  05_etl_pipeline.aura  06_rest_api.aura  COGNITIVE_DEMO.md  README.md  api_demo.aura  broken.aura  cognitive_config.aura  cognitive_demo.aura  cognitive_func.aura  env_demo.aura  errors.aura  expect_demo.aura  goal_demo.aura  hello.aura  hot_reload_demo.aura  invariant_demo.aura  math.aura  self_heal_annotation_demo.aura  self_healing_demo.aura  simple.aura
examples/imports/: demo_multi.aura  main.aura  math_helpers.aura  utils.aura
projects/motostock/: README.md  REQUIREMENTS.md  init.aura  motostock.aura  schema.sql  test_api.sh
projects/motostock/back/: schema.sql  test_api.sh
projects/motostock/front/: app.js  index.html  package-lock.json  package.json  style.css
projects/motostock/front/src/: App.css  App.jsx  api.js  index.css
projects/motostock/front/src/components/: Dashboard.jsx  Modal.jsx  Motos.jsx  Orders.jsx  Parts.jsx
projects/motostock/spec/: SPEC.md
req/: v0-sistema-documentacion.md  v1-vision-principios.md  v2-sintaxis.md  v3-runtime.md  v4-agente-bridge.md  v5-implementacion-fase1.md  v6-roadmap-fase2.md  v7-roadmap-fase3.md  v8-server-capability.md
src/: cli_output.rs  lib.rs  loader.rs  main.rs
src/agent/: bridge.rs  claude.rs  healing.rs  memory.rs  mod.rs  ollama.rs  openai.rs  prompts.rs  request.rs  response.rs  snapshot.rs  undo.rs
src/caps/: db.rs  env.rs  http.rs  json.rs  mod.rs
src/error/: mod.rs  pretty.rs
src/lexer/: mod.rs  tokens.rs
src/parser/: ast.rs  mod.rs
src/reload/: apply.rs  diff.rs  mod.rs
src/server/: http.rs  mod.rs  request.rs  response.rs  router.rs
src/types/: mod.rs
src/vm/: agent_cognitive.rs  checkpoint.rs  cognitive.rs  mod.rs  runner.rs
tests/: json_output.rs  undo_snapshots.rs
