[package]
name = "aura"
version = "0.1.0"
edition = "2024"
description = "Agent-Unified Runtime Architecture - A programming language for AI agents"
license = "MIT"

[features]
default = []
claude-api = []  # Habilita integración con Claude API
ollama = []      # Habilita integración con Ollama (modelos locales)

[dependencies]
# Lexer - tokenización ultra rápida
logos = "0.15"

# Parser - combinators expresivos
chumsky = "0.9"

# Errores bonitos para humanos (debug)
ariadne = "0.4"

# Serialización (errores JSON para agentes)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async runtime (para +http, +db, etc.)
tokio = { version = "1.0", features = ["full"] }

# HTTP client (usando rustls para evitar dependencia de OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Utilidades
thiserror = "2.0"

# SQLite database (for +db capability)
rusqlite = { version = "0.32", features = ["bundled"] }

# PostgreSQL database (for +db capability)
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
bytes = "1.5"

# TLS support for PostgreSQL (optional, for secure connections)
rustls = "0.23"
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
webpki-roots = "0.26"

# Lazy static for global connection registry
lazy_static = "1.5"
